--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-fastapi = "^0.95.1"
-uvicorn = "^0.21.1"
-sqlalchemy = "^2.0.9"
+fastapi = {extras = ["all"], version = "^0.95.1"}
 python-dotenv = "^1.0.0"
+sqlalchemy = "^2.0.9"
+uvicorn = {extras = ["standard"], version = "^0.21.1"}
+psycopg2-binary = "^2.9.6"
+fastapi-csrf-protect = "^0.2.2"
 
 
 [build-system]
