--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+asyncpg = "^0.27.0"
 fastapi = {extras = ["all"], version = "^0.95.1"}
 fastapi-csrf-protect = "^0.2.2"
-psycopg2-binary = "^2.9.6"
+fastapi-users = {extras = ["sqlalchemy"], version = "^10.4.2"}
 python-dotenv = "^1.0.0"
 sqlalchemy = "^2.0.9"
 uvicorn = {extras = ["standard"], version = "^0.21.1"}
