--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,9 @@
         "**/.DS_Store": true,
         "**/__pycache__": true,
         "**/Thumbs.db": true,
-        "poetry.lock": true
-    }
+        "poetry.lock": true,
+        "pyproject.toml": true,
+        "**/*.json": true
+    },
+    "python.analysis.typeCheckingMode": "basic"
 }
