--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,17 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-asyncpg = "^0.27.0"
 fastapi = {extras = ["all"], version = "^0.95.1"}
 fastapi-csrf-protect = "^0.2.2"
-fastapi-users = {extras = ["sqlalchemy"], version = "^10.4.2"}
+fastapi-login = "^1.9.0"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-dotenv = "^1.0.0"
-sqlalchemy = "^2.0.9"
-uvicorn = {extras = ["standard"], version = "^0.21.1"}
+uvicorn = {extras = ["all"], version = "^0.21.1"}
+requests = {version = "^2.28.2", optional = true}
+fastapi-sql = "^0.1.6"
+
+[tool.poetry.group.dev.dependencies]
+requests = "^2.29.0"
 
 [build-system]
 requires = ["poetry-core"]
