--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,16 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-fastapi = {extras = ["all"], version = "^0.95.1"}
+fastapi = "^0.95.1"
 fastapi-csrf-protect = "^0.2.2"
 fastapi-login = "^1.9.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-dotenv = "^1.0.0"
 uvicorn = {extras = ["all"], version = "^0.21.1"}
 requests = {version = "^2.28.2", optional = true}
-fastapi-sql = "^0.3.2"
+fastapi-sql = "^0.3.7"
+python-multipart = "^0.0.6"
+humanize = "^4.6.0"
 
 [tool.poetry.group.dev.dependencies]
 requests = "^2.29.0"
