--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ psycopg2-binary = "^2.9.6"
 authlib = "^0.15.3"
 itsdangerous = "^2.1.2"
 httpx = "^0.24.0"
+slowapi = "^0.1.8"
+asyncpg = "^0.27.0"
 
 [tool.poetry.group.dev.dependencies]
 pyOpenSSL = "^23.1.1"
