Add Redux-React to the mix

--- a/babel.config.json
+++ b/babel.config.json
@@ -8,6 +8,16 @@
       ],
       [
         "@babel/preset-env",
+        {
+          "targets": [
+            "> 0.25%, not dead"
+          ]
+        }
+      ]
+    ],
+    "plugins": [
+      [
+        "macros",
         {}
       ]
     ]
