--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "fastinni",
   "version": "1.0.0",
-  "description": "",
+  "description": "Node Packages for Fastinni",
   "main": "index.js",
   "scripts": {
     "build": "babel src/js -d src",
     "pack": "webpack --config webpack.config.js"
   },
-  "author": "",
+  "author": "Khrysys",
   "license": "ISC",
   "dependencies": {
-    "@babel/cli": "^7.22.15",
-    "@babel/core": "^7.22.17",
-    "@babel/preset-env": "^7.22.15",
-    "@babel/preset-react": "^7.22.15",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/jquery": "^3.5.18",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
@@ -21,9 +23,17 @@
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-scripts": "^5.0.1",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
+  }, 
+  "devDependencies": {
+    "@babel/cli": "^7.22.15",
+    "@babel/core": "^7.22.17",
+    "@babel/preset-env": "^7.22.15",
+    "@babel/preset-react": "^7.22.15",
+    "babel-plugin-macros": "^3.1.0"
   }
 }
