--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,10 @@ alembic = "^1.12.0"
 asyncpg = "^0.28.0"
 fastapi = "^0.95.1"
 python-dotenv = "^1.0.0"
-SQLAlchemy = {extras = ["async"], version = "^2.0.20"}
+SQLAlchemy = "^2.0.20"
 uvicorn = {extras = ["all"], version = "^0.23.2"}
 fastapi-csrf-protect = "^0.3.2"
+pyjwt = {extras = ["crypto"], version = "^2.8.0"}
 
 [tool.poetry.group.dev.dependencies]
 pyOpenSSL = "^23.2.0"
