--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "react-scripts": "^5.0.1"
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.15",
