--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ SQLAlchemy = {extras = ["async"], version = "^2.0.21"}
 uvicorn = {extras = ["all"], version = "^0.23.2"}
 fastapi-csrf-protect = "^0.3.2"
 pyjwt = {extras = ["crypto"], version = "^2.8.0"}
+fastapi-mail = "1.3.1"
 
 [tool.poetry.group.dev.dependencies]
 pyOpenSSL = "^23.2.0"
