--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,11 @@ uvicorn = {extras = ["all"], version = "^0.23.2"}
 fastapi-csrf-protect = "^0.3.2"
 pyjwt = {extras = ["crypto"], version = "^2.8.0"}
 fastapi-mail = "1.3.1"
-authlib = "^1.2.1"
-httpx = "^0.25.0"
 sqlmodel = "^0.0.8"
 psycopg2 = "^2.9.7"
+humanize = "^4.8.0"
+oauthlib = "^3.2.2"
+requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
 pyOpenSSL = "^23.2.0"
