--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,16 +7,17 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "^0.95.1"
-python-dotenv = "^1.0.0"
-uvicorn = {extras = ["all"], version = "^0.23.2"}
-pyjwt = {extras = ["crypto"], version = "^2.8.0"}
+fastapi = "^0.103.1"
 fastapi-mail = "1.3.1"
-sqlmodel = "^0.0.8"
-psycopg2 = "^2.9.7"
 humanize = "^4.8.0"
 oauthlib = "^3.2.2"
+psycopg2 = "^2.9.7"
+pyjwt = {extras = ["crypto"], version = "^2.8.0"}
+python-dotenv = "^1.0.0"
 requests = "^2.31.0"
+sqlmodel = "^0.0.8"
+uvicorn = {extras = ["all"], version = "^0.23.2"}
+pydantic = "1.10.12"
 
 [tool.poetry.group.dev.dependencies]
 pyOpenSSL = "^23.2.0"
