--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,13 @@ fastapi = "^0.103.1"
 fastapi-mail = "1.3.1"
 humanize = "^4.8.0"
 oauthlib = "^3.2.2"
-psycopg2 = "^2.9.7"
 pyjwt = {extras = ["crypto"], version = "^2.8.0"}
 python-dotenv = "^1.0.0"
 requests = "^2.31.0"
 sqlmodel = "^0.0.8"
 uvicorn = {extras = ["all"], version = "^0.23.2"}
 pydantic = "1.10.12"
+psycopg2-binary = "^2.9.8"
 
 [tool.poetry.group.dev.dependencies]
 pyOpenSSL = "^23.2.0"
