--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "compile": "npm run sass && npm run build && npm run pack",
-        "sass": "sass static/sass:static/css && sass static/sass:html/css",
-        "build": "babel static -d html",
         "pack": "webpack --config webpack.config.js"
     },
     "author": "",
@@ -17,16 +14,16 @@
         "@babel/preset-env": "^7.23.6",
         "@babel/preset-react": "^7.23.3",
         "@types/jquery": "^3.5.29",
+        "babel-loader": "^9.1.3",
         "babel-plugin-macros": "^3.1.0",
-        "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.8.1",
-        "dotenv-webpack": "^8.0.1",
         "html-webpack-plugin": "^5.6.0",
         "jquery": "^3.7.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.12.0",
         "sass": "^1.69.5",
+        "sass-loader": "^13.3.3",
         "style-loader": "^3.3.3",
         "webpack": "^5.89.0",
         "webpack-cli": "^5.1.4"
