--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "pack": "webpack --config webpack.config.js"
+        "pack": "webpack --config webpack.config.js",
+        "produce-win": "cross-env NODE_ENV=production webpack --config webpack.config.js",
+        "produce": "NODE_ENV=production webpack --config webpack.config.js"
     },
     "author": "",
     "license": "ISC",
@@ -19,6 +21,7 @@
         "css-loader": "^6.8.1",
         "html-webpack-plugin": "^5.6.0",
         "jquery": "^3.7.1",
+        "mini-css-extract-plugin": "^2.7.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.12.0",
@@ -27,5 +30,8 @@
         "style-loader": "^3.3.3",
         "webpack": "^5.89.0",
         "webpack-cli": "^5.1.4"
+    },
+    "devDependencies": {
+        "cross-env": "^7.0.3"
     }
 }
