--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,11 @@ fastapi = "^0.108.0"
 uvicorn = "^0.25.0"
 python-dotenv = "^1.0.0"
 sqlmodel = "^0.0.14"
+pyjwt = {extras = ["crypto"], version = "^2.8.0"}
+psycopg = {extras = ["binary", "pool"], version = "^3.1.16"}
 
 
 [tool.poetry.group.dev.dependencies]
-cryptography = "^41.0.7"
 datetime = "^5.4"
 requests = "^2.31.0"
 pyopenssl = "^23.3.0"
