--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.0"
 sqlmodel = "^0.0.14"
 pyjwt = {extras = ["crypto"], version = "^2.8.0"}
 psycopg = {extras = ["binary", "pool"], version = "^3.1.16"}
+alembic = "^1.13.1"
 
 
 [tool.poetry.group.dev.dependencies]
