--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ sqlmodel = "^0.0.14"
 pyjwt = {extras = ["crypto"], version = "^2.8.0"}
 psycopg = {extras = ["binary", "pool"], version = "^3.1.16"}
 alembic = "^1.13.1"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 
 
 [tool.poetry.group.dev.dependencies]
