--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ psycopg = {extras = ["binary", "pool"], version = "^3.1.16"}
 alembic = "^1.13.1"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+fastapi-csrf-protect = "^0.3.3"
 
 
 [tool.poetry.group.dev.dependencies]
