--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pyjwt = {extras = ["crypto"], version = "^2.8.0"}
 psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
 requests = "^2.31.0"
 uvicorn = "^0.27.0"
+cryptography = ">=42.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pyopenssl = "^24.0.0"
