--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
 requests = "^2.31.0"
 uvicorn = "^0.27.0"
 cryptography = ">=42.0.0"
+python-multipart = "^0.0.9"
 
 [tool.poetry.group.dev.dependencies]
 pyopenssl = "^24.0.0"
