--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,9 @@ private.key
 selfsigned.crt
 
 # Database Migration files (not all of them, due to modifications)
-migrations/versions/
+migrations/versions/*
+# We want to keep this so the directory exists.
+!migrations/versions/__init__.py
 migrations/README
 
 # Editor directories
