--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ requests = "^2.31.0"
 uvicorn = "^0.27.0"
 cryptography = ">=42.0.0"
 python-multipart = "^0.0.9"
+typer = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 pyopenssl = "^24.0.0"
