--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ uvicorn = "^0.27.1"
 cryptography = ">=42.0.0"
 python-multipart = "^0.0.9"
 typer = "^0.9.0"
+asyncpg = "^0.29.0"
 
 [tool.poetry.group.dev.dependencies]
 pyopenssl = "^24.0.0"
